--- a/index.css
+++ b/index.css
@@ -371,3 +371,61 @@ button{
 }
 
 
+@media only screen and (min-width:1025px) and (max-width:1200px) {
+    .box {
+        font-size: 30px;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: 900;
+        background-color: white;
+        color: red;
+        margin-top: 30px;
+        border: solid 1px black;
+        width: 49.25%;
+        height: 310px;
+
+    }
+
+}
+
+@media only screen and (min-width:730px) and (max-width:768px) {
+button{
+margin-left: 140px;    
+}
+.input {
+    width: 49%;
+    height: 100px;
+    border-radius: 25px;
+    padding: 0.5px;
+}
+
+#totalmarks {
+    margin-left: 20%;
+    font-size: 12px;
+    width: 70%;
+    }
+
+
+
+.box {
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    background-color: white;
+    color: red;
+    margin-top: 30px;
+    border: solid 1px black;
+    width: 49.2%;
+    height: 310px;
+
+}
+
+}
+
+
+@media only screen and (min-width:590px) and (max-width:768px) {
+button{
+ margin-left: 220px;   
+}
+}
