--- a/index.css
+++ b/index.css
@@ -242,7 +242,10 @@ button:hover {
         height: 310px;
     
     }
-    
+   .box2{
+
+   width: 49.2%; 
+   } 
 }
 @media only screen and (min-width:320px) and (max-width:404px) {
     .container {
