--- a/index.css
+++ b/index.css
@@ -291,7 +291,9 @@ button:hover {
         height: 310px;
     
     }
-
+box2{
+ width: 49%;   
+}
 }
 
 @media only screen and (min-width:768px) and (max-width:1024px) {
